# kEngram

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS.md.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  README.md  SECURITY.md  docker-compose.yml  start_server.sh  start_stack.sh  start_worker.sh  tagger-sweep.sh
.sqlx/: query-46ab55c5d27a0b0fa86c96277dc82e0b5669c1ace992f4eeee55c47e11325e16.json  query-5e6c805f2319b60c19231762242c5ba18eee9aac3575af66311beef5bffe23ab.json  query-957274e6a31d1087eeafd9b74971fec0b0e9516ca20d8c3b3fb72048b9d14de2.json  query-97975bffcb89d2fa528df13edba4e5044ff172cfb4772ed406765e504b374980.json  query-b6d382c986f48185f1f63ce75a46fb47da896c797710111b9fd74ae453fc2ddd.json  query-f1267427453c004842a69c60389081002762b7663cea69a3df221f6952160ca0.json
config/: kengram.example.toml
contrib/systemd/: README.md  kengram-migrate.service  kengram-server.service  kengram-stack.service  kengram-worker.service
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: bench.rs  config.rs  main.rs
crates/engram-core/: Cargo.toml
crates/engram-core/src/: embedder.rs  fact.rs  lib.rs  relation.rs  search.rs  tagger.rs  tags.rs  thought.rs
crates/engram-embed/: Cargo.toml
crates/engram-embed/src/: fake.rs  fake_reranker.rs  lib.rs  openai_compatible.rs  reranker.rs  tei_reranker.rs
crates/engram-extract/: Cargo.toml
crates/engram-extract/examples/: tagger_eval.rs
crates/engram-extract/src/: fake_tagger.rs  http_tagger.rs  lib.rs  openai_compatible.rs
crates/engram-extract/tests/fixtures/: use_mention.json
crates/engram-mcp/: Cargo.toml
crates/engram-mcp/src/: backfill.rs  capture.rs  correct.rs  drain.rs  lib.rs  link.rs  reflect.rs  relate.rs  retract.rs  search.rs  server.rs  validate.rs
crates/engram-storage/: Cargo.toml
crates/engram-storage/src/: lib.rs
crates/engram-tagger-deterministic/: Cargo.toml  Dockerfile  README.md  fixtures.json  topic-taxonomy.toml
crates/engram-tagger-deterministic/src/: dates.rs  kind.rs  lib.rs  main.rs  ner.rs  preprocess.rs  topics.rs
crates/engram-tagger-protocol/: Cargo.toml
crates/engram-tagger-protocol/src/: lib.rs
crates/kengram-cli/: Cargo.toml
crates/kengram-cli/src/: backup.rs  bench.rs  chunk.rs  config.rs  contextual.rs  corpus_hygiene_security.rs  main.rs
crates/kengram-cli/src/eval/: arms.rs  corpus.rs  export.rs  mod.rs  report.rs  run.rs  score.rs
crates/kengram-core/: Cargo.toml
crates/kengram-core/src/: embedder.rs  embedding.rs  lib.rs  metadata.rs  metrics.rs  relation.rs  scope.rs  search.rs  source.rs  sparse.rs  tagger.rs  tags.rs
crates/kengram-embed/: Cargo.toml
crates/kengram-embed/src/: fake.rs  lib.rs  openai_compatible.rs  openai_compatible_sparse.rs  reranker.rs  tei_reranker.rs
crates/kengram-extract/: Cargo.toml
crates/kengram-extract/examples/: tagger_eval.rs
crates/kengram-extract/src/: fake_tagger.rs  http_tagger.rs  lib.rs  openai_compatible.rs
crates/kengram-extract/tests/fixtures/: entity_selection.json  forward_looking.json
crates/kengram-mcp/: Cargo.toml
crates/kengram-mcp/src/: backfill.rs  capture.rs  drain.rs  filters.rs  finalize.rs  lib.rs  link.rs  normalize.rs  query_expansion.rs  relate.rs  retract.rs  search.rs  server.rs  validate.rs
crates/kengram-mcp/tests/: tag_filter_live_corpus_probe.rs
crates/kengram-storage/: Cargo.toml
crates/kengram-storage/src/: corpus_hygiene.rs  lib.rs
crates/kengram-tagger-deterministic/: Cargo.toml  Dockerfile  README.md  fixtures.json  topic-taxonomy.toml
crates/kengram-tagger-deterministic/src/: dates.rs  kind.rs  lib.rs  main.rs  ner.rs  preprocess.rs  topics.rs
crates/kengram-tagger-protocol/: Cargo.toml
crates/kengram-tagger-protocol/src/: lib.rs
docs/: engram-design-v0.md  linux-autostart.md  tagger-backends.md  tagger-eval-harness.md  tagger-improvements.md  tagger-sidecar-protocol.md
docs/goals/: README.md  use-mention.md
docs/images/: architecture.mmd
docs/milestones/: m0-dev-environment.md  m1-capture-and-search.md  m1-progress.md  m2-facts-pipeline.md  m2-progress.md  m3-progress.md  m3-search-quality.md  m4-collapse-to-thoughts.md  m4-spec.md  m4.1-tagging-v2.md  m5-operational-maturity.md  m5-selective-relations.md  m6-artifacts.md  m6-stats-and-tagger-relations.md  m7-operational-maturity.md
docs/reviews/: architecture-review-2026-06-09.md
eval/: models.example.toml
eval/corpora/: example.json
migrations/: 0001_initial.sql  0003_thoughts_retraction.sql  0005_facts_flagged.sql  0006_collapse_to_thoughts.sql  0007_thought_links.sql  0008_relation_supports.sql  0009_thought_links_heterogeneous_targets.sql  0010_thought_links_soft_delete_and_audit.sql  0011_drop_tags_relations.sql  0012_argus_source_events.sql  0014_thoughts_fts_lexical.sql  0019_corpus_surgery_audit_and_chunks.sql  0019_thought_scope_aliases_reconciliation.sql  0020_artifact_chunk_bge_sidecar.sql  0021_artifact_chunk_index_guard.sql  0022_artifact_chunk_bge_hnsw.sql  0023_artifact_chunks_fts.sql  0025_bge_m3_sparse_sidecar.sql  0026_bge_m3_thought_sparse_hnsw.sql  0027_bge_m3_artifact_chunk_sparse_hnsw.sql  0028_artifact_chunk_contextual_retrieval.sql  0029_ingest_hygiene_audit.sql  0030_corpus_hygiene_gate.sql  0031_doc_source_ref_v2_aliases.sql
migrations/rollback/: 0014_thoughts_fts_lexical_down.sql  0030_corpus_hygiene_gate_down.sql  0031_doc_source_ref_v2_aliases_down.sql
scripts/: bench-rerank.md  bge_m3_sparsevec_backfill.py  check-thought-insert-chokepoint.sh  check-thought-link-chokepoint.sh  eval_denylist_preflight.py  smoke.md
tests/fixtures/: bench-rerank.example.json
