[workspace]
resolver = "2"
members = [
  "crates/kengram-core",
  "crates/kengram-storage",
  "crates/kengram-embed",
  "crates/kengram-extract",
  "crates/kengram-mcp",
  "crates/kengram-cli",
  "crates/kengram-tagger-protocol",
  "crates/kengram-tagger-deterministic",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
publish = false
authors = ["Ron Forrester <ron.forrester@me.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
kengram-core            = { path = "crates/kengram-core" }
kengram-storage         = { path = "crates/kengram-storage" }
kengram-embed           = { path = "crates/kengram-embed" }
kengram-extract         = { path = "crates/kengram-extract" }
kengram-mcp             = { path = "crates/kengram-mcp" }
kengram-tagger-protocol = { path = "crates/kengram-tagger-protocol" }

# Async runtime + traits
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tokio-util  = { version = "0.7", features = ["rt"] }
async-trait = "0.1"

# Errors
thiserror = "2"
anyhow    = "1"

# Serde
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs and timestamps
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "macros", "formatting", "parsing"] }

# Tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }

# Database
sqlx     = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "macros", "migrate"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# HTTP clients / servers
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
axum    = "0.8"

# Config
figment = { version = "0.10", features = ["toml", "env"] }
toml    = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# MCP
rmcp = { version = "1.6", features = ["server", "macros", "transport-streamable-http-server"] }

# Cron scheduling (M2 Phase C reflector). 0.15.1 is latest stable per cargo info.
tokio-cron-scheduler = "0.15"

# Test utilities (dev-deps)
wiremock = "0.6"
