[package]
name = "engram-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[[bin]]
name = "engram"
path = "src/main.rs"

[dependencies]
engram-core.workspace = true
engram-storage.workspace = true
engram-embed.workspace = true
engram-extract.workspace = true
engram-mcp.workspace = true

anyhow.workspace = true
axum.workspace = true
clap.workspace = true
figment.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
