[package]
name = "engram-embed"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
engram-core.workspace = true

async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
