[package]
name = "engram-mcp"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
engram-core.workspace = true
engram-storage.workspace = true
engram-embed.workspace = true

async-trait.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
