[package]
name = "kengram-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[[bin]]
name = "kengram"
path = "src/main.rs"

[dependencies]
kengram-core.workspace = true
kengram-storage.workspace = true
kengram-embed.workspace = true
kengram-extract.workspace = true
kengram-mcp.workspace = true

anyhow.workspace = true
axum.workspace = true
clap.workspace = true
figment.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
