[package]
name = "kengram-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
base64 = "0.22"
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
