[package]
name = "kengram-embed"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
kengram-core.workspace = true

async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true

[features]
# Enables integration tests that hit a real Ollama instance at
# http://localhost:11434/v1 with `bge-m3` pulled. Off by default; run with
# `cargo test --features integration` after `docker compose up postgres` and
# `ollama pull bge-m3`.
integration = []
