[package]
name = "kengram-mcp"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
kengram-core.workspace = true
kengram-storage.workspace = true
kengram-embed.workspace = true

async-trait.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
kengram-extract.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
