[package]
name = "kengram-storage"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
kengram-core.workspace = true

pgvector.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
sha2 = "0.10"
